Adds L.GeoSearch library

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
 <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
 
+<script src="L.GeoSearch/js/l.control.geosearch.js"></script>
+<script src="L.GeoSearch/js/l.geosearch.provider.openstreetmap.js"></script>
+<link rel="stylesheet" href="L.GeoSearch/css/l.geosearch.css" />
+
 </head>
 
 <body>
