--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<title>Cadáveres Inmobiliarios. Adopta un cadáver</title>
+<title>Mapa de Cadáveres Inmobiliarios</title>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
@@ -85,9 +85,6 @@ function addDataToMap(data,markerStyle) {
 	});
 	dataLayer.addTo(map);
 }
-$.getJSON("data/error_de_sistema.geojson", function(data) { addDataToMap(data,styleDesenterrado); });
-$.getJSON("data/bases_datos_previas.geojson", function(data) { addDataToMap(data,styleDesenterrado); });
-$.getJSON("data/especulacionecologistas.geojson", function(data) { addDataToMap(data,styleDesenterrado); });
 $.getJSON("data/base_datos_cadaveres_inmobiliarios_151007.geojson", function(data) { addDataToMap(data,styleAdoptado); });
 
 // MAP layer
