--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@ var styleAdoptado = {
     color: "#666",
     weight: 1,
     opacity: 0.8,
-    fillOpacity: 0.8
+    fillOpacity: 1
 }
+// POPUP
 // DATA: geoJSON layers
 function addDataToMap(data,markerStyle) {
 	var dataLayer = L.geoJson(data, {
@@ -61,8 +62,20 @@ function addDataToMap(data,markerStyle) {
 			return L.circleMarker(latlng,markerStyle);
 		},
 		onEachFeature: function(feature, layer) {
+			layer.bindPopup(feature.properties.nombre_promocional,{ closeButton: false, offset: L.point(0,-20) });
 				layer.on({
-					click: openSidebar
+					click: prepareSidebar,
+					mouseover: function() {
+						layer.openPopup();
+						layer.setStyle({weight: 5});
+						if (!L.Browser.ie && !L.Browser.opera) {
+							layer.bringToFront();
+						}
+					},
+					mouseout: function() {
+						layer.closePopup();
+						layer.setStyle({weight: 1});
+					}
 				});
 		}
 	});
@@ -106,20 +119,25 @@ map.on('click', function () {
 	sidebar.hide();
 })
 
-function openSidebar(e) {
+function prepareSidebar(e) {
 	var layer = e.target;
 	layer.setStyle({
-		weight: 5,
-		color: '#666',
-		dashArray: '',
-		fillOpacity: 0.7
+		weight: 5
 	});
 
 	if (!L.Browser.ie && !L.Browser.opera) {
 		layer.bringToFront();
 	}
-	sidebar.setContent("<header><h3>" + layer.feature.properties.nombre_promocional + "</h3></header><p>¡Cadáver adoptado!</p>");
-	sidebar.toggle();
+	var fields = "";
+	for (var k in v = layer.feature.properties) {
+		if( v.hasOwnProperty(k) && v[k] != "null" ) {
+			fields += "<strong>"+k+"</strong> "+v[k]+"<br>";
+		}
+	}
+	sidebar.setContent("<header><h3>" + layer.feature.properties.nombre_promocional + "</h3></header>"+fields);
+	if ( !sidebar.isVisible() ) {
+		sidebar.toggle();
+	}
 }
 L.DomEvent.on(sidebar.getCloseButton(), 'click', function () {
 	console.log('Close button clicked.');
