Adds head meta tags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="es-ES">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <title>Mapa de Cadáveres Inmobiliarios</title>
+
+<!-- generic meta -->
+<meta content="Cadáveres Inmobiliarios" name="author" />
+<meta name="title" content="Mapa de Cadáveres Inmobiliarios" />
+<meta name="description" content="Base de datos de proyectos arquitectónicos y desarrollos urbanísticos inacabados, infrautilizados o vacíos del periodo post-burbuja inmobiliaria." />
+<!-- facebook meta -->
+<meta property="og:title" content="Mapa de Cadáveres Inmobiliarios" />
+<meta property="og:type" content="website" />
+<meta property="og:description" content="Mapa de la base de datos de proyectos arquitectónicos y desarrollos urbanísticos inacabados, infrautilizados o vacíos del periodo post-burbuja inmobiliaria en España." />
+<meta property="og:url" content="http://cadaveresinmobiliarios.org/mapa" />
+<!-- twitter meta -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@cadaveres_inmob">
+<meta name="twitter:title" content="Mapa de Cadáveres Inmobiliarios" />
+<meta name="twitter:description" content="Mapa de la base de datos de proyectos arquitectónicos y desarrollos urbanísticos inacabados, infrautilizados o vacíos del periodo post-burbuja inmobiliaria en España." />
+<meta name="twitter:creator" content="@cadaveres_inmob">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
