Map screenshot for meta tags

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 <meta property="og:type" content="website" />
 <meta property="og:description" content="Mapa de la base de datos de proyectos arquitectónicos y desarrollos urbanísticos inacabados, infrautilizados o vacíos del periodo post-burbuja inmobiliaria en España." />
 <meta property="og:url" content="http://cadaveresinmobiliarios.org/mapa" />
+<meta property="og:image" content="http://cadaveresinmobiliarios.org/mapa/screenshot.png" />
 <!-- twitter meta -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@cadaveres_inmob">
 <meta name="twitter:title" content="Mapa de Cadáveres Inmobiliarios" />
 <meta name="twitter:description" content="Mapa de la base de datos de proyectos arquitectónicos y desarrollos urbanísticos inacabados, infrautilizados o vacíos del periodo post-burbuja inmobiliaria en España." />
 <meta name="twitter:creator" content="@cadaveres_inmob">
+<meta name="twitter:image:src" content="http://cadaveresinmobiliarios.org/mapa/screenshot.png">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
